[project]
name = "Kasiski"
version = "0.1.0"
authors = [
  { name="Ahmed SQALLI HOUSSAINI", email="ahmad.lifad@gmail.com" },
]
description = "A library for ciphering and deciphering."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/ahmadsqalli/kasiski"
"Bug Tracker" = "https://github.com/ahmadsqalli/kasiski/issues"