[metadata]
name = Kasiski
version = 1.0.0
author = Ahmed SQALLI HOUSSAINI
author_email = ahmad.lifad@gmail.com
description = A Python library for classical cryptography and cryptanalysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmadsqalli/Kasiski/
project_urls =
    Bug Tracker = https://github.com/ahmadsqalli/Kasiski/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Topic :: Education
    Intended Audience :: Education

[options]
package_dir = = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src